# mergefile.py

./: .prompt  LICENSE  MANIFEST.in  README.md  README_zh.md  mergefile.py  pyproject.toml  setup.py  test_cli_examples.py  test_file_check.py  test_wildcard.py
tests/: test_cli_examples.py  test_file_check.py  test_wildcard.py
