[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mergefile"
version = "1.1.0"
description = "Merge multiple files into XML or Markdown format, suitable for LLM input"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    {name = "Liu Shengli", email = "liushengli203@163.com"}
]
license = {text = "MIT"}
keywords = ["merge", "files", "xml", "markdown", "llm", "ai", "documentation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]

dependencies = []  # 仅使用标准库，无外部依赖

[project.urls]
Homepage = "https://github.com/gseismic/mergefile"
Bug-Tracker = "https://github.com/gseismic/mergefile/issues"
Documentation = "https://github.com/gseismic/mergefile/blob/main/README.md"
Source = "https://github.com/gseismic/mergefile"

[project.scripts]
mergefile = "mergefile:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.910",
    "types-setuptools",
]

[tool.setuptools]
py-modules = ["mergefile"]

[tool.black]
line-length = 88
target-version = ["py36"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
